# platform2

./: .gitignore  CPPLINT.cfg  PRESUBMIT.cfg  README.md  navbar.md  unblocked_terms.txt
attestation/: BUILD.gn  OWNERS
bluetooth/: BUILD.gn  README.md
bootid-logger/: BUILD.gn  README.md  bootid_logger.cc  bootid_logger.h  bootid_logger_test.cc  log-bootid-on-boot.conf  main.cc
crash-reporter/: BUILD.gn  OWNERS  README.md  TEST_AUDIT_LOG  TEST_MESSAGE_LOG  TEST_UPSTART_LOG  anomaly_detector.cc  anomaly_detector.h  anomaly_detector_fuzzer.cc  anomaly_detector_log_reader.cc  anomaly_detector_log_reader.h  anomaly_detector_log_reader_test.cc  anomaly_detector_main.cc  anomaly_detector_service.cc  anomaly_detector_service.h  anomaly_detector_test.cc  anomaly_detector_test_utils.cc  anomaly_detector_test_utils.h  anomaly_detector_text_file_reader.cc  anomaly_detector_text_file_reader.h  anomaly_detector_text_file_reader_test.cc  arc_collector.cc  arc_collector.h  arc_collector_test.cc  arc_service_failure_collector.h  arc_service_failure_collector_test.cc  arc_util.cc  arc_util.h  arc_util_test.cc  arcvm_kernel_collector.cc  arcvm_kernel_collector.h  arcvm_kernel_collector_test.cc  arcvm_native_collector.cc  arcvm_native_collector.h  arcvm_native_collector_test.cc  bert_collector.cc  bert_collector.h  bert_collector_test.cc  chrome_collector.cc  chrome_collector.h  (+83 more)
cronista/: Cargo.toml
croslog/: BUILD.gn  boot_records.cc  boot_records.h  boot_records_test.cc  config.cc  config.h  config_test.cc  cursor_util.cc  cursor_util.h  cursor_util_test.cc  file_change_watcher.cc  file_change_watcher.h  file_change_watcher_test.cc  file_map_reader.cc  file_map_reader.h  log_entry.cc  log_entry.h  log_entry_reader.cc  log_entry_reader.h  log_entry_reader_test.cc  log_line_reader.cc  log_line_reader.h  log_line_reader_test.cc  log_parser.cc  log_parser.h  log_parser_audit.cc  log_parser_audit.h  log_parser_audit_test.cc  log_parser_syslog.cc  log_parser_syslog.h  log_parser_syslog_test.cc  main.cc  multiplexer.cc  multiplexer.h  multiplexer_test.cc  severity.cc  severity.h  testrunner.cc  viewer_journal.cc  viewer_journal.h  (+3 more)
diagnostics/: BUILD.gn  OWNERS
dlcservice/: BUILD.gn  OWNERS  daemon.cc  daemon.h  dlc.cc  dlc.h  dlc_manager.cc  dlc_manager.h  dlc_manager_test.cc  dlc_service.cc  dlc_service.h  dlc_service_test.cc  dlc_test.cc  dlcservice.conf  error.cc  error.h  error_test.cc  main.cc  metrics.cc  metrics.h  metrics_test.cc  mock_dlc_service.h  mock_metrics.h  mock_state_change_reporter.h  mock_system_properties.h  org.chromium.DlcService.conf  prefs.cc  prefs.h  prefs_test.cc  ref_count.cc  ref_count.h  ref_count.proto  ref_count_test.cc  state_change_reporter_interface.h  system_properties.cc  system_properties.h  system_state.cc  system_state.h  system_state_test.cc  test_utils.cc  (+8 more)
federated/: BUILD.gn  README.md  daemon.cc  daemon.h  federated_service_impl.cc  federated_service_impl.h  federated_service_impl_test.cc  main.cc  mock_storage_manager.h  storage_manager.h  storage_manager_impl.cc  storage_manager_impl.h  test_utils.cc  test_utils.h  testrunner.cc  utils.cc  utils.h  utils_test.cc
foomatic_shell/: BUILD.gn  OWNERS  README.md  grammar.cc  grammar.h  main.cc  parser.cc  parser.h  parser_fuzzer.cc  parser_test.cc  process_launcher.cc  process_launcher.h  scanner.cc  scanner.h  scanner_test.cc  shell.cc  shell.h  verifier.cc  verifier.h
hwsec-test-utils/: BUILD.gn  OWNERS
image-burner/: BUILD.gn  daemon.cc  daemon.h  image_burn_service.cc  image_burn_service.h  image_burner_impl.cc  image_burner_impl_test.cc  image_burner_main.cc  image_burner_test_utils.h  image_burner_utils.cc  image_burner_utils.h  image_burner_utils_interfaces.h  image_burner_utils_test.cc  org.chromium.ImageBurner.service
ippusb_bridge/: Cargo.toml  OWNERS  README.md
ippusb_manager/: BUILD.gn  OWNERS  README.md  ippusb_manager.cc  overview_diagram.dot  socket_manager.cc  socket_manager.h  usb.cc  usb.h
libchromeos-rs/: Cargo.toml  OWNERS  build.rs
lorgnette/: BUILD.gn  OWNERS  daemon.cc  daemon.h  enums.cc  enums.h  epson_probe.cc  epson_probe.h  firewall_manager.cc  firewall_manager.h  guess_source.cc  guess_source.h  ippusb_device.cc  ippusb_device.h  ippusb_device_test.cc  lorgnette_cli.cc  main.cc  manager.cc  manager.h  manager_test.cc  sane_client.cc  sane_client.h  sane_client_fake.cc  sane_client_fake.h  sane_client_impl.cc  sane_client_impl.h  sane_client_test.cc  test_util.cc  test_util.h
minios/: BUILD.gn  README.md  key_reader.cc  key_reader.h  key_reader_test.cc  main.cc  minios.cc  minios.h  process_manager.cc  process_manager.h  screens.cc  screens.h  screens_test.cc
ml/: BUILD.gn  README.md  benchmark.cc  benchmark.h  benchmark_test.cc  command_line.cc  daemon.cc  daemon.h  dlcservice_client.cc  dlcservice_client.h  dlcservice_client_test.cc  grammar_checker_impl.cc  grammar_checker_impl.h  grammar_library.cc  grammar_library.h  grammar_library_test.cc  grammar_proto_mojom_conversion.cc  grammar_proto_mojom_conversion.h  grammar_proto_mojom_conversion_test.cc  graph_executor_impl.cc  graph_executor_impl.h  graph_executor_impl_test.cc  handwriting.cc  handwriting.h  handwriting_path.cc  handwriting_path.h  handwriting_proto_mojom_conversion.cc  handwriting_proto_mojom_conversion.h  handwriting_proto_mojom_conversion_test.cc  handwriting_recognizer_impl.cc  handwriting_recognizer_impl.h  handwriting_test.cc  machine_learning_service_impl.cc  machine_learning_service_impl.h  machine_learning_service_impl_test.cc  main.cc  metrics.cc  metrics.h  model_impl.cc  model_impl.h  (+27 more)
ml_benchmark/: BUILD.gn  OWNERS  benchmark.h  benchmark_functions.h  json_serializer.cc  json_serializer.h  json_serializer_test.cc  main.cc  memory_sampler.cc  memory_sampler.h  memory_sampler_test.cc  ml_benchmark_test.cc  shared_library_benchmark.cc  shared_library_benchmark.h  shared_library_benchmark_functions.cc  shared_library_benchmark_functions.h  shared_library_benchmark_test.cc  sysmetrics.cc  sysmetrics.h  sysmetrics_test.cc
nnapi/: BUILD.gn  OWNERS
ocr/: BUILD.gn  OWNERS  daemon.cc  (+5 more)
(+6378 files in other folders)
