# Copyright 2019 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

group("all") {
  deps = [
    "//diagnostics/cros_health_tool:cros-health-tool",
    "//diagnostics/cros_healthd:cros_healthd",
    "//diagnostics/cros_healthd/routines:floating-point-accuracy",
    "//diagnostics/cros_healthd/routines:prime-search",
    "//diagnostics/cros_healthd/routines:smartctl-check",
    "//diagnostics/cros_healthd/routines:urandom",
    "//diagnostics/wilco_dtc_supportd:wilco_dtc_supportd",
  ]
  if (use.test) {
    deps += [
      "//diagnostics/common:libcommon_test",
      "//diagnostics/cros_healthd:cros_healthd_test",
      "//diagnostics/cros_healthd/events:libcros_healthd_events_test",
      "//diagnostics/cros_healthd/fetchers:libcros_healthd_fetchers_test",
      "//diagnostics/cros_healthd/network:network_test",
      "//diagnostics/cros_healthd/routines:routine_test",
      "//diagnostics/cros_healthd/system:system_config_test",
      "//diagnostics/cros_healthd/utils:libcros_healthd_utils_test",
      "//diagnostics/cros_healthd_mojo_adapter:cros_healthd_mojo_adapter_test",
      "//diagnostics/wilco_dtc_supportd:wilco_dtc_supportd_test",
    ]
  }
  if (use.fuzzer) {
    deps += [
      "//diagnostics/cros_healthd/fetchers:fetch_block_device_fuzzer",
      "//diagnostics/cros_healthd/fetchers:fetch_system_info_fuzzer",
    ]
  }
}
